fixed a minor bug, and updated the chat code

--- a/ChatWave/Auth/templates/register/registerbase.html
+++ b/ChatWave/Auth/templates/register/registerbase.html
@@ -106,7 +106,7 @@
       <button type="submit">Register</button>
 
       <!-- Link to login page -->
-      <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+      <p>Already have an account? <a href="{% url 'login_logic' %}">Login</a></p>
     </form>
   </div>
 </body>
